assets/css/theme.css
/* ... */
.page {
	display: grid;
	grid-template-rows: 1fr;
	grid-template-columns: 10px minmax(0, 4fr) 10px;

	> div {
		z-index: 1;
		margin: calc(-100dvh + 5.5rem + 12rem) .5rem .5rem;
		> .rounded-card {
			top: .5rem;
			min-width: 7rem;
		}
	}

	> section {
		position: relative;
		margin-top: calc(-100dvh + 5.5rem + 12rem);
		padding: 0 1rem;
		background-color: var(--alpha-background-color);

		/* backdrop-filter: blur(3px); */
		&::before {
			content: "";
			position: absolute;
			top: -4rem;
			left: 0;
			width: 100%;
			height: 2rem;
			border: 2rem solid transparent;
			border-bottom-color: var(--alpha-background-color);
			/* backdrop-filter: blur(3px); */
		}
	}

	> aside {
		position: sticky;
		top: 4rem;
	}

	@media (min-width: 992px) {
		grid-template-rows: 1fr;
		grid-template-columns: 1fr minmax(0, 4fr) 1fr;
	}
}

article {

	> h1 {
		margin: 0 0 1rem;
		font-size: 2rem;
	}

	h2 {
		margin-bottom: 1rem;
		border-bottom: 2px solid currentColor;
	}

	h3,
	h4,
	h5,
	h6 {
		&::after {
			content: "";
			display: block;
			width: 100px;
			height: 2px;
			margin-right: 100%;
			border-right: 50px solid lightslategrey;
			border-top: 0;
			border-bottom: 0;
			border-left: 50px solid currentColor;
		}
	}

	img {
		max-width: 100%;
	}

	> table {
		margin-bottom: 1rem;
		tr {
			border-top: 1px solid currentColor;
			border-bottom: 1px solid currentColor;
			td {
				padding-right: 1rem;
			}
		}
	}

	ul#toc {
		max-width: max-content;
		margin: 0 auto 1rem;
	
		&,
		& ul {
			list-style-type: disclosure-closed;
		}
	}
}

blockquote {
	position: relative;
	display: inline-block;
	width: 100%;
	margin: 0 0 1em;
	padding: 0 2rem;

	&:not([class*="block"]) {
		background: linear-gradient(90deg, rgba(85, 204, 255, 0.25), transparent);
	}

	&.block-warning {
		background: linear-gradient(90deg, rgba(255, 165, 36, 0.25), transparent);
	}

	&::before {
		content: "";
		display: block;
		position: absolute;
		top: 0;
		left: 0;
		width: 6px;
		height: 100%;
		border-style: solid;
		border-color: currentColor;
		border-width: 2px 0 2px 2px;
	}

	&>p:first-child {
		margin-top: 1em;
	}
}

.parallax {
	width: 100%;

	&::before {
		background-image: var(--background-image);
	}

	&::after {
		background-color: var(--background-color);
	}
}

section.category-cards {
	display: grid;
	grid-template-rows: 1fr;
	grid-template-columns: 1fr 1fr;
	gap: 1rem 1rem;
	margin-bottom: 1rem;

	@media (min-width: 992px) {
		grid-template-columns: 1fr 1fr 1fr 1fr;
	}

	.card {
		display: grid;
		margin-bottom: 1rem;
		grid-template-rows: 3fr 1fr;
		grid-template-columns: 1fr;
		gap: 1rem 1rem;
		align-items: center;
		justify-items: center;
		background: var(--card-background-color);
		color: var(--color);
		box-shadow: 0 1rem 1.5rem -.5rem rgba(0, 0, 0, 0.75);
		text-decoration: none;
		transition: all 250ms ease-out;

		&:hover {
			transform: scale(1.02);
			box-shadow: 0 1.5rem 2rem .5rem rgba(0, 0, 0, 0.25);
		}

		.logo {
			width: 50%;
			height: auto;
		}
	}
}

section.article-cards {
	display: grid;
	grid-template-columns: 1fr;
	gap: 1.5rem 1.5rem;
	margin-bottom: 1rem;

	@media (min-width: 992px) {
		grid-template-columns: 1fr 1fr;
	}

	.card {
		display: grid;
		grid-template-rows: 1fr;
		grid-template-columns: 1fr;
		background-color: var(--card-background-color);
		color: var(--color);
		box-shadow: 0 1rem 1.5rem -.5rem rgba(0, 0, 0, 0.75);
		text-decoration: none;
		transition: all 250ms ease-out;

		&:hover {
			transform: scale(1.02);
			box-shadow: 0 1.5rem 2rem .5rem rgba(0, 0, 0, 0.25);

			& header {
				background-size: 120%;
			}
		}

		header {
			display: flex;
			justify-content: space-between;
			height: 3rem;
			background-image: var(--background-image);
			background-size: 100%;
			background-position: center;
			transition: background-size 250ms ease-out;

			h2 {
				position: relative;
				display: inline-block;
				height: 3rem;
				margin: 0;
				padding-top: .2rem;
				padding-left: .5rem;
				background-color: var(--card-background-color);
				white-space: nowrap;

				&::after {
					content: "";
					position: absolute;
					top: 0;
					border-color: transparent transparent var(--card-background-color) var(--card-background-color);
					border-style: solid;
					border-width: 1.5rem;
					width: 1rem;
					height: 100%;
				}
			}

			img {
				width: 2rem;
				height: 2rem;
				margin: .5rem;
			}
		}

		> div {
			height: 5.5rem;
			padding: 1rem .5rem;
			overflow: hidden;
		}
	}
}

@keyframes underline-animation {
	from {
		background-size: 100% 100%;
		background-position: bottom right;
	}

	50% {
		background-size: 0 100%;
		background-position: bottom right;
	}

	50.01% {
		background-position: bottom left;
	}

	100% {
		background-size: 100% 100%;
		background-position: bottom left;
	}
}

.anchorjs-link {
	color: var(--link-color);
}

.rounded-card {
	display: inline-block;
	border-radius: 1.5rem;
	margin-bottom: 1rem;
	padding: .4rem 1rem;
	background: linear-gradient(.3turn, var(--alpha-black), var(--alpha-white), var(--alpha-black));
	backdrop-filter: blur(3px);
}

button.nier,
.button.nier {
	position: relative;
	margin: 0.5rem;
	padding: 0.1em .2em 0 .2em;
	background: linear-gradient(to top, var(--color) 0%, var(--color) 100%) no-repeat;
	background-size: 0 100%;
	transition: background-size .3s, color .3s;
	color: white;

	&::after {
		content: '';
		display: block;
		position: absolute;
		top: 0;
		bottom: 0;
		left: 0;
		right: 0;
		border-width: 2px 0;
		border-style: solid;
		border-color: transparent;
		transition: border-color 200ms ease-out, top 200ms ease-out, bottom 200ms ease-out;
	}

	&:hover {
		background-size: 100% 100%;
		color: var(--background-color);
		color: black;

		&.bullet::before {
			width: .5em;
			height: .5em;
			background-color: currentColor;
		}

		&::after {
			border-color: white;
			top: -.5rem;
			bottom: -.5rem;
		}
	}
}
/* ... */

